# pl_env

./: .gitignore  pyproject.toml  train.py  train_bak.py
Dassl.pytorch/: pyproject.toml
configs/trainers/CoOp/: vit_b16.yaml
scripts/: config.yaml  generate_configs.py
trainers/: coop.py
