[project]
name = "kgcoop"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "dassl @ file:///${PROJECT_ROOT}/Dassl.pytorch",
    "torch==2.0.0",
    "torchvision",
    "ftfy>=6.2.0",
    "regex>=2024.7.0",
    "wilds==1.2.2",
    "tabulate>=0.9.0",
    "ttach>=0.0.3",
    "opencv-python>=4.10.0",
    "matplotlib>=3.9.0",
    "timm>=1.0.0",
    'numpy<2.0.0',
    "ml_collections>=0.1.1",
    "setuptools<69.0.0",
]


[tool.uv.sources]
torch = [
    { index = "pytorch-cu117", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchvision = [
    { index = "pytorch-cu117", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchaudio = [
    { index = "pytorch-cu117", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]

[[tool.uv.index]]
name = "pytorch-cu117"
url = "https://download.pytorch.org/whl/cu117"
explicit = true


[tool.uv]
index-url = "https://mirrors.aliyun.com/pypi/simple"
